# Self-Healing-ETL-Pipeline-with-a-Maintenance-Copilot

./: .env.example  README.md  codebase_context.txt  package-lock.json  pyproject.toml  test.ipynb  watermark.txt
.agents/: AGENTS.md
backend/: agent.py  agent_tools.py  dependencies.py  main.py  mcp_client.py  schemas.py
backend/config/: cors.py
backend/mcp/: agent.py  agent_tools.py  client.py  prompts.py
backend/routers/: chat.py  health.py  maintenance.py  notifications.py  occ.py  orphans.py  simulation.py
config/: config.py
connection/: db_connection.py  spark_session.py
data/: faker_generator.py  incremental_fixture.py  inventory_seed.py
etl/: bronze_load.py  create_medallion_schema.py  incremental_load.py  init_schema.py  initial_load.py  inventory_load.py  schema.sql  silver_load.py  simulate_batches.py  watermark.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: OCCControl.tsx  SimulationControl.tsx  copilotChat.tsx
frontend/src/components/chat/: copilotChat.tsx
frontend/src/components/dashboard/: DashboardOverview.tsx  MaintenanceHistoryPanel.tsx  (+1 more)
frontend/src/hooks/: api.ts  useChat.ts  useLakehouseData.ts  useMaintenance.ts  useOCC.ts  useProactiveAlerts.ts  useSimulation.ts  useTableHealth.ts
frontend/src/store/: chatState.ts  uiState.ts
frontend/src/utils/: occUtils.ts  pairMaintenanceEvents.ts  transformHealthHistory.ts
maintenance/: compaction.py  health_metrics.py  occ_conflict_test.py  occ_crash_test.py  occ_service.py  occ_writer.py
(+10 files in other folders)
