[project]
name = "self-healing-etl-pipeline-with-a-maintenance-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.23.0",
    "fastapi>=0.138.2",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "uvicorn>=0.49.0",
]
